--- a/project-manager.html
+++ b/project-manager.html
@@ -40,8 +40,20 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.lever.co/adara/22d03cf7-ab3a-49bb-be30-50d539aa4946'>ADARA - Technical Project Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/dentwizard/job/oOJrbfwT'>Dent Wizard International Careers - Regional Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Metia/743999698426712-project-manager'>Metia Project Manager | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Austin, TX London Seattle Austin Singapore</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/cortland/b4dc6b84-bbfe-4f8c-a1b8-aa72a5dfe1ff'>Cortland - Construction Project Manager - Austin - 9999</a></h5> 
+<p><span class="badge badge-light">Austin Austin</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/adara/22d03cf7-ab3a-49bb-be30-50d539aa4946'>ADARA - Technical Project Manager</a></h5> 
+<p><span class="badge badge-light">Palo Alto, California</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://shijigroup.join.com/jobs/469341-product-program-manager-m-f'>Job @ Shiji (Berlin): Product Program Manager (m/f) | JOIN</a></h5> 
@@ -178,11 +190,11 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://www.nesgt.com/job/107430060323/sap-project-slash-programme-manager-1/'>SAP Project/Programme Manager with ref. BH-117757-1 - NES Global Talent</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.nesgt.com/job/107430060323/sap-project-slash-programme-manager-1/'>SAP Project/Programme Manager with ref. BH-117757-1 - NES Global Talent</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://archinect.com/jobs/entry/150167171/design-developer-project-manager-for-sculptor'>Design Developer/Project Manager for Sculptor - New York, NY, US | Jobs | Archinect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://archinect.com/jobs/entry/150167171/design-developer-project-manager-for-sculptor'>Design Developer/Project Manager for Sculptor - New York, NY, US | Jobs | Archinect</a></h5> 
 <p><span class="badge badge-light">New York, NYNew York, NY</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -278,7 +290,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/yelp/e3b07897-95c2-4af2-b72e-c9cdfd541bbc'>Yelp - Program Manager, Integrated Marketing</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/yelp/e3b07897-95c2-4af2-b72e-c9cdfd541bbc'>Yelp - Program Manager, Integrated Marketing</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -294,7 +306,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qKd9VfwL&k=Job&j=oNfs7fwl&__jvst=Employee&__jvsd=se8Imfwa&__jvsc=Twitter&bid=nksWmMwl'>Zensar Technologies Careers - Project Manager-Agile</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qKd9VfwL&k=Job&j=oNfs7fwl&__jvst=Employee&__jvsd=se8Imfwa&__jvsc=Twitter&bid=nksWmMwl'>Zensar Technologies Careers - Project Manager-Agile</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -350,7 +362,7 @@ Policy and all answers provided by me within this application are true and corre
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kivaconfections/71ed8764-e35e-4a25-994c-c675e773d2a1'>Kiva Confections - External Partners Program Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/kivaconfections/71ed8764-e35e-4a25-994c-c675e773d2a1'>Kiva Confections - External Partners Program Manager</a></h5> 
 <p><span class="badge badge-light">California California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -420,7 +432,7 @@ Policy and all answers provided by me within this application are true and corre
 <p><span class="badge badge-light">Canada Canada Waterloo, Canada  London, ON  Canada</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999692438196-project-manager-software-implementation-birmingham'>Fulton Garrick Ltd Project Manager - Software Implementation - Birmingham | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999692438196-project-manager-software-implementation-birmingham'>Fulton Garrick Ltd Project Manager - Software Implementation - Birmingham | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -441,7 +453,7 @@ communication skills to lead all phases of our website redesign projects.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Oct 15, 2019 ... Apply to Project Manager, Shared Tech at CoverMyMeds in Columbus, OH.</p>
 <hr/>
-<h5><a href='https://harrisassociates.applytojob.com/apply/kcAiAFfc5U/Project-Manager'>Project Manager - Harris & Associates - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://harrisassociates.applytojob.com/apply/kcAiAFfc5U/Project-Manager'>Project Manager - Harris & Associates - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 17, 2019 ... Apply to Project Manager at Harris & Associates in Concord, CA.</p>
 <hr/>
@@ -450,21 +462,7 @@ communication skills to lead all phases of our website redesign projects.</p>
 <p>Oct 17, 2019 ... Oversee complex projects being delivered to external customers, within the 
 public transit space, where the deliverables have direct ties to revenue.</p>
 <hr/>
-<h5><a href='https://vitalproteins.applytojob.com/apply/cSvE9x9XAk/Project-Manager-Commercialization'>Project Manager, Commercialization - Vital Proteins - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Oct 14, 2019 ... Apply to Project Manager, Commercialization at Vital Proteins in Chicago, IL.</p>
-<hr/>
-<h5><a href='https://girlscoutsgreaterchicagoandnwindiana.applytojob.com/apply/cjGALdrcwN/Marketing-Program-Manager'>Marketing Program Manager - Girl Scouts of Greater Chicago and ...</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Oct 14, 2019 ... Marketing Program Manager ? Membership. Reporting to the Director of 
-Marketing and Brand, the Marketing Program Manager oversees integrated,?...</p>
-<hr/>
-<h5><a href='https://mosscm.applytojob.com/apply/KULn10pQcB/Construction-Senior-Project-Manager-HighRise-Commercial-MultiFamily'>Construction Senior Project Manager (High-Rise, Commercial, Multi ...</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Oct 16, 2019 ... Apply to Construction Senior Project Manager (High-Rise, Commercial, Multi-
-Family)) at Moss & Associates in Dallas, TX.</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
